# vision-demo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/grafana/dashboards/: vision-demo.json
docker/prometheus/: prometheus.yml
scripts/: download_coco.py  split_train_test.py  train.py  upload_to_minio.py
src/vision_demo/: __init__.py  app.py  models.py
src/vision_demo/data/: __init__.py  coco.py  dataset.py  storage.py
src/vision_demo/model/: __init__.py  detector.py
tests/: test_app.py  test_coco.py  test_dataset.py  test_detector.py  test_models.py  test_placeholder.py  test_storage.py
